--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,14 @@
-<% provide(:title, 'All Users') %>
-<h1>Users</h1>
-<% if @users.length == 0 %>
-  <p>List of users is empty</p>
-<% else %>
-  <table>
-	<% @users.each do |user| %>
-	  <tr>
-	   <td><%= user.name %></td>
-	   <td><%= user.email %></td>
-	  </tr>
-   <% end %>
-  </table>
-<% end %>
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
+
+<%= will_paginate %>
+
+<ul class="users">
+  <% if @users.length == 0 %>
+    <p>List of users is empty</p>
+  <% else %>
+    <%= render @users %>
+  <% end %>
+</ul>
+
+<%= will_paginate %>
